--- a/swastiapp/templates/index1.html
+++ b/swastiapp/templates/index1.html
@@ -25,20 +25,7 @@
         <input type="name" name="name" id="name" required class="form-control mb-4" placeholder="Name">
 
         <!-- RAZORPAY INTEGRATION HERE -->
-        <script
-    src="https://checkout.razorpay.com/v1/checkout.js"
-    data-key="rzp_live_c3Tu4t0RwnyP12"
-    data-amount="10000"
-    data-currency="INR"
-    data-order_id="{{payment.id}}"
-    data-buttontext="Pay with Razorpay"
-    data-name="Swasti"
-    data-description="Swasti Health care"
-    data-image="https://www.google.com/search?q=dragon+images&rlz=1C1GCEB_enIN987IN987&tbm=isch&source=iu&ictx=1&vet=1&fir=cY8W9O43QCnIZM%252CidEfJplNEZkfIM%252C_%253BwC7gqi0gvGOwxM%252CidEfJplNEZkfIM%252C_%253BZQ1NtyvzkP-StM%252CdY6py0fXGceDVM%252C_%253BjwO1L87xax2ewM%252Cmtte6h0VDEzUaM%252C_%253BzX_HZNE_4tU48M%252CGRAZleF-ssJSOM%252C_%253BvctiUIINUJkMDM%252Cmtte6h0VDEzUaM%252C_%253BL7ZYjmIFk9aH6M%252Cu-OBT6pwrdw8AM%252C_%253BNw-prjcMZ0HP7M%252CDCnB27BAAxN_oM%252C_%253BTUBbd_HxL0zJiM%252CidEfJplNEZkfIM%252C_%253BZpbNQiR5-GB2zM%252CdsMWUgfeWpc82M%252C_%253BPq6ieTd1ZEbO5M%252CDCnB27BAAxN_oM%252C_%253BsajehO7hIhai2M%252C-vmOT5mt2Hk0YM%252C_%253BAQIdlqd2HoykbM%252CkAjgqzobMJp7IM%252C_%253Bw-acXfjKvG0aHM%252CQMvHG8y2QCEKRM%252C_&usg=AI4_-kRhC2Z3RlooBV0zxpAvINo7x6yDDA&sa=X&ved=2ahUKEwj2uM_Zp5H3AhUbT2wGHeedBDoQ9QF6BAgJEAE#imgrc=jwO1L87xax2ewM"
-    data-prefill.name="Gaurav Kumar"
-    data-prefill.email="gaurav.kumar@example.com"
-    data-theme.color="#F37254"
-></script>
+<script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_JItPVA3fc7kRxZ" async> </script>
     </form>
 
 </div>
