--- a/swastiapp/templates/index.html
+++ b/swastiapp/templates/index.html
@@ -1,5 +1,4 @@
 {% load static %}
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -49,7 +48,7 @@
             <div class="col-md-6 text-md-left pl-0">
               <a href="#" class=" pr-3 pl-0">Home</a>
               <a href="#" class="p-3">Events</a>
-              <a href="#" class="p-3">Become A Volunteer</a>
+              <a href="https://rzp.io/l/VIKcsSE" class="p-3">Become A Volunteer</a>
             </div>
             <div class="col-md-6 text-md-right">
               <a href="#" class="p-3"><span class="icon-twitter"></span></a>
